--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="艺术家作品集 - 展示原创艺术作品与创作理念">
-    <title>艺术家作品集 | Artist Portfolio</title>
+    <title>林时林作品集 | LIN SHILIN Portfolio</title>
     
     <!-- SEO和社交媒体优化 -->
     <meta property="og:title" content="艺术家作品集">
@@ -34,7 +34,7 @@
     <nav class="navbar" id="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <a href="#home">Artist Name</a>
+                <a href="#home">林时林</a>
             </div>
             <div class="nav-menu" id="nav-menu">
                 <a href="#home" class="nav-link">首页</a>
@@ -185,7 +185,7 @@
                 <div class="contact-info">
                     <div class="contact-item">
                         <h3>邮箱</h3>
-                        <p>artist@example.com</p>
+                        <p>linshilin.art@gmail.com</p>
                     </div>
                     <div class="contact-item">
                         <h3>社交媒体</h3>
@@ -220,7 +220,7 @@
     <!-- 页脚 -->
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2025 Artist Name. All rights reserved.</p>
+            <p>&copy; 2025 林时林. All rights reserved.</p>
         </div>
     </footer>
 
